완료변경 수정, 코드다듬기, 모달컴포 시작

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -31,12 +31,11 @@
     "noFallthroughCasesInSwitch": true,
 
     /* Path */
-    "baseUrl": ".",
+    "baseUrl": "./",
     "paths": {
-      "@/*": ["src/*"],
-      "@components/*": ["src/components/*"]
+      "@/*": ["src/*"]
     }
   },
-  "include": ["src"],
+  "include": ["src", "vite.config.ts"],
   "references": [{ "path": "./tsconfig.node.json" }]
 }
